--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230115.0",
     "typescript": "^4.9.5",
-    "vitest": "^0.28.3",
-    "wrangler": "2.9.0"
+    "wrangler": "3.2.0"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
-    "deploy": "wrangler publish"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy"
   }
 }
